<resources>
    <string name="app_name">NY Museum Prices</string>
    <string name="met_btn">Metropolitan Museum of Art</string>
    <string name="modern_art_btn">Museum of Modern Art</string>
    <string name="natural_history_btn">American Museum of Natural History</string>
    <string name="guggenheim_btn">Solomon R. Guggenheim Museum</string>
    <string name="met_pic">met_pic</string>
    <string name="natural_history_pic">natural_history_pic</string>
    <string name="guggenheim_pic">guggenheim_pic</string>
    <string name="modern_art_pic">modern_art_pic</string>
    <string name="museum_pic">museum_pic</string>
    <string name="ticket_type">ticket_type</string>
    <string name="adult">Adult</string>
    <string name="senior">Senior</string>
    <string name="student">Student</string>
    <string name="adult_ticket_price">Adult Admission:</string>
    <string name="senior_ticket_price">Senior Admission:</string>
    <string name="student_ticket_price">Student Admission:</string>
    <string name="website_tap_reminder">(Click on image to visit website)</string>
    <string name="senior_tickets">Senior Tickets: 0</string>
    <string name="student_tickets">Student Tickets: 0</string>
    <string name="adult_tickets">Adult Tickets: 0</string>
    <string name="ticket_pricing">Ticket Pricing:</string>
    <string name="zero_tick_price">$0</string>
    <string name="sales_tax">Sales Tax:</string>
    <string name="zero_dec_price">$0.00</string>
    <string name="total">Total:</string>
</resources>